--- a/views/foot.jade
+++ b/views/foot.jade
@@ -1,3 +1,5 @@
-div.mastfoot
-  div.inner
-    p Copyright (c) footbar
+div.navbar.navbar-default.varbar-fixed-bottom
+  div.footer.text-center
+    div.container
+      <br>
+      p.text-muted Copyright (c) footbar
